@@ -339,6 +339,36 @@ int igraph_vs_vector_small(igraph_vs_t *vs, ...) {
 }
 
 /**
+ * \function igraph_vs_vector_copy
+ * 
+ * This function makes it possible to handle a \type vector_t
+ * permanently as a vertex selector. The vertex selector creates a
+ * copy of the original vector, so the vector can safely be destroyed
+ * after creating the vertex selector. Changing the original vector
+ * will not affect the vertex selector. The vertex selector is
+ * responsible for deleting the copy made by itself.
+ * 
+ * \param vs Pointer to an uninitialized vertex selector.
+ * \param v Pointer to a \type igraph_vector_t object.
+ * \return Error code.
+ * 
+ * Time complexity: O(1).
+ */
+
+int igraph_vs_vector_copy(igraph_vs_t *vs,
+			  const igraph_vector_t *v) {
+  vs->type=IGRAPH_VS_VECTOR;
+  vs->data.vecptr=Calloc(1, igraph_vector_t);
+  if (vs->data.vecptr==0) {
+    IGRAPH_ERROR("Cannot create vertex selector", IGRAPH_ENOMEM);
+  }
+  IGRAPH_FINALLY(igraph_free, (igraph_vector_t*)vs->data.vecptr);
+  IGRAPH_CHECK(igraph_vector_copy((igraph_vector_t*)vs->data.vecptr, v));
+  IGRAPH_FINALLY_CLEAN(1);
+  return 0;
+}
+
+/**
  * \function igraph_vs_seq
  * 
  * Creates a vertex selector containing all vertices with vertex id
